[gd_scene load_steps=3 format=3 uid="uid://cne1qcj4dl58n"]

[ext_resource type="Script" path="res://scene/CGs/jobs.gd" id="1_sfuae"]
[ext_resource type="PackedScene" uid="uid://3s7ls8if6w62" path="res://scene/CGs/story_telling.tscn" id="2_1ybq0"]

[node name="Jobs" type="Node2D"]
script = ExtResource("1_sfuae")

[node name="StoryTelling" parent="." instance=ExtResource("2_1ybq0")]
anchors_preset = 9
anchor_right = 0.0
grow_horizontal = 1

[node name="Label" type="Label" parent="."]
visible = false
offset_left = 258.0
offset_top = 84.0
offset_right = 396.0
offset_bottom = 107.0
text = "Entered job scene"

[node name="Button" type="Button" parent="."]
offset_left = 14.0
offset_top = 16.0
offset_right = 59.0
offset_bottom = 47.0
text = "Back"

[connection signal="tree_exited" from="StoryTelling" to="." method="_on_story_telling_tree_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
